--- a/client-hptq/src/App.css
+++ b/client-hptq/src/App.css
@@ -13,6 +13,10 @@
   }
 }
 
+body {
+  background-image: url("../src/assets/bg-img.jpeg")
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -32,7 +36,21 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.active {
+  color: rgb(0, 208, 255);
+  transform: scale(1);
+}
+
+nav ul {
+  list-style-type: none;
+}
+
+nav ul li {
+  cursor: pointer;
 }
