--- a/client-hptq/src/App.css
+++ b/client-hptq/src/App.css
@@ -1,39 +1,10 @@
 body,
 html {
-  background-image: url("../src/assets/bg-img.jpeg");
-  height: 100%;
-  width: 100%;
+  /* background-image: url("../src/assets/bg-img.jpeg");
+height: 100vh;
+width: 100vw; */
 }
 
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
@@ -50,8 +21,8 @@ html {
 
 .home {
   width: 100vw;
-  height: 100vh;
-  background: #fff;
+  /* height: 100vh; */
+  /* background: #fff; */
   color: #212121;
   font-family: "Open Sans", sans-serif;
   display: grid;
