--- a/client-hptq/src/App.css
+++ b/client-hptq/src/App.css
@@ -1,8 +1,8 @@
 body,
 html {
-  /* background-image: url("../src/assets/bg-img.jpeg");
-height: 100vh;
-width: 100vw; */
+  /* background-image: url("../src/assets/bg-img.jpeg");*/
+  height: 100vh;
+  width: 100vw;
 }
 
 
