--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
+
+
 body,
 html {
   /* background-image: url("../src/assets/bg-img.jpeg");*/
   height: 100vh;
   width: 100vw;
+
+
 }
 
 @keyframes App-logo-spin {
@@ -240,8 +244,30 @@ nav ul li {
   justify-content: center;
 }
 
+.uppercase {
+  text-transform: uppercase;
+}
+
 /* Canvas */
 
 .canvas {
   cursor: url(pencil.png), auto;
+}
+
+
+
+
+.path {
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 1000;
+  animation: dash 2s linear alternate infinite;
+}
+
+@keyframes dash {
+  from {
+    stroke-dashoffset: 822;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
 }
