--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@ html {
   /* background-image: url("../src/assets/bg-img.jpeg");*/
   height: 100vh;
   width: 100vw;
-
 }
 
 @keyframes App-logo-spin {
@@ -252,49 +251,73 @@ nav ul li {
 }
 
 .hidden {
-  display: none
+  display: none;
 }
 
 @keyframes rotate {
   from {
-      transform: rotate(0deg);
+    transform: rotate(0deg);
   }
-  to { 
-      transform: rotate(360deg);
+  to {
+    transform: rotate(360deg);
   }
 }
 
-
 @-webkit-keyframes rotate {
   from {
-      -webkit-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
   }
-  to { 
-      -webkit-transform: rotate(360deg);
+  to {
+    -webkit-transform: rotate(360deg);
   }
 }
 
 .load {
-width: 100px;
-height: 100px;
-margin: 110px auto 0;
-border:solid 10px #8822aa;
-border-radius: 50%;
-border-right-color: transparent;
-border-bottom-color: transparent;
- -webkit-transition: all 0.5s ease-in;
-  -webkit-animation-name:             rotate; 
-  -webkit-animation-duration:         1.0s; 
-  -webkit-animation-iteration-count:  infinite;
+  width: 200px;
+  height: 200px;
+  margin: 170px auto 0;
+  border: solid 10px #8822aa;
+  border-radius: 50%;
+  border-right-color: transparent;
+  border-bottom-color: transparent;
+  -webkit-transition: all 0.5s ease-in;
+  -webkit-animation-name: rotate;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-iteration-count: infinite;
   -webkit-animation-timing-function: linear;
-    
-     transition: all 0.5s ease-in;
-  animation-name:             rotate; 
-  animation-duration:         1.0s; 
-  animation-iteration-count:  infinite;
-  animation-timing-function: linear; 
+
+  transition: all 0.5s ease-in;
+  animation-name: rotate;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
 }
 
-.loadContainer{
-  text-align: center
+.loadContainer {
+  text-align: center;
+}
+
+/* Settings */
+
+.roomNum {
+  color: yellow;
+  font-size: 1.3rem;
+}
+
+.loadContainer {
+  height: 100vh;
+  font-size: 2rem;
+  margin-top: 1rem;
+}
+
+/* Game Room */
+
+.timerContainer {
+  display: flex;
+  flex-direction: row;
+}
+
+.roundInfo {
+  font-weight: "700";
+  text-align: center;
 }
