added abit of styling for user in chat

--- a/src/App.css
+++ b/src/App.css
@@ -340,6 +340,11 @@ nav ul li {
   color: black !important;
 }
 
+.userInChat {
+  color: #8822aa !important;
+  font-size: 1.3rem;
+  font-weight: bold;
+}
 /* Game Over */
 
 .gameOverContainer {
